# DMopenarm

./: PROJECT_LOG.md  README.md
dm_openarm/: CMakeLists.txt  README.md  pyproject.toml
dm_openarm/config/: arm_5dof.yaml
dm_openarm/examples/: arm_mit_control.cpp  check_comm.cpp  enable_disable.cpp  hold_position.cpp  set_zero_position.cpp
dm_openarm/include/dm_openarm/: config.hpp  dm_arm.hpp  mit_control_command.hpp  mit_loop_controller.hpp  motor.hpp  motor_group.hpp  types.hpp  yaml_loader.hpp
dm_openarm/include/dm_openarm/backend/: dm_serial_backend.hpp  motor_backend.hpp
dm_openarm/python/dm_openarm/: __init__.py  arm.py
dm_openarm/python/dm_openarm/examples/: __init__.py  basic_enable.py  mit_loop_control.py
dm_openarm/src/: dm_arm.cpp  mit_control_command.cpp  mit_loop_controller.cpp  motor.cpp  motor_group.cpp  python_bindings.cpp  yaml_loader.cpp
dm_openarm/src/backend/: dm_serial_backend.cpp
dm_openarm/tests/: test_mit_control_command.cpp  test_mit_loop_controller.cpp  test_python_api.py  test_yaml_loader.cpp
python_script/: enable_disable.py  mit_control_one_motor.py  read_states.py
resources/DMmotor/src/: main.cpp
resources/DMmotor/src/protocol/: damiao.cpp
